help card spacing fixes

--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -1723,10 +1723,14 @@ h2 {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                justify-content: space-evenly;
+                justify-content: space-between;
                 min-width: 40vw;
                 max-width: 250px;
                 height: auto;
+
+                img {
+                    margin-bottom: auto;
+                }
 
                 h3 {
                     font-family: 'Kanit', 'sans-serif';
@@ -1735,6 +1739,7 @@ h2 {
                     text-align: center;
                     font-weight: 600;
                     margin-top: 2rem;
+                    margin-bottom: auto;
                 }
 
                 p {
